# amcoff.net

./: .dockerignore  .eslintrc.json  Cargo.toml  Dockerfile  build.rs  bun.lockb  fly.toml  package.json  tailwind.config.ts
_posts/: 2.mdx  example.mdx  proof-of-concept.mdx  spying-on-my-classmates-with-an-esp8266.mdx  using-discord-as-a-cms.mdx
app/: root.tsx
app/components/: Grid.module.css  Grid.tsx
app/routes/: _index.tsx
graphics/: Cargo.toml  build.rs
graphics/src/: favicon.rs  lib.rs  og.typ  sandbox.rs
src/: graphics.rs  index.html  main.rs  pages.rs  spotify.rs  styles.css
src/app/: fonts.ts  layout.tsx  page.tsx
src/components/: Background.tsx  Base.module.scss  Base.tsx  Layout.module.scss  Layout.tsx  Navigation.module.scss  Navigation.tsx  PostContent.module.scss  PostContent.tsx  PostHeader.module.scss  PostHeader.tsx  PostList.module.scss  PostList.tsx  Prose.module.scss  Prose.tsx  Skeleton.tsx  Warning.module.scss  Warning.tsx
src/lib/: posts.ts  status.ts  uptime.ts
src/pages/: [slug].tsx  _app.tsx  _document.tsx  index.tsx  status.tsx
src/pages/api/: status.ts  uptime.ts
src/styles/: globals.scss  highlight.scss
