[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.2.0"
indexmap = { version = "2.7.1", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = "0.3.37"
ttf-parser = "0.25.1"
typst = "0.12.0"
typst-assets = { version = "0.12.0", features = ["fonts"] }
typst-render = "0.12.0"

[build-dependencies]
image = { version = "0.25.5", default-features = false, features = ["ico", "jpeg", "png"] }
